<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Honeymoon Bridge</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_hint">Enable bidding hints</string>
    <string name="pref_description_hint">Hint for what to bid with your cards
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_gamemodes_list_titles">
        <item>Random Trump, no bidding</item>
        <item>Random Trump, trick bidding</item>
        <item>bidding with trump</item>
    </string-array>
    <string-array name="pref_gamemodes_list_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />


    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_description_sound">Turn off and on game sound</string>
    <string name="pref_title_sound">Sound</string>
    <string name="pref_title_gamemodes">Change game mode</string>
    <string name="play">Play</string>
    <string name="chooseNet">Choose net</string>
    <string name="Bid">Bid</string>
    <string name="Double">X</string>
    <string name="Redouble">XX</string>
    <string name="Pass">Pass</string>
    <string name="Opponent">Opponent:</string>
    <string name="N">North:</string>
    <string name="S">South:</string>
    <string name="win">You win!</string>
    <string name="lose">You lose!</string>
    <string name="draw">Draw!</string>
    <string name="playAgain">Play again</string>
    <string name="mainMenu">Main Menu</string>
    <string name="trickScore">Trick score:</string>
    <string name="OverUnder">Over/under:</string>
    <string name="bonus">Bonus:</string>
    <string name="totalPoints">Total Points:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contract">Contract</string>
    <string name="difficulty">Difficulty</string>
    <string name="AI">AI</string>
    <string name="sound">Sound</string>
    <string name="animation">Animation</string>
    <string name="onOff">on/off</string>
    <string name="backgroundcolor">Background color</string>
    <string name="gameMode">Game mode</string>
    <string name="standarGameMode">1</string>
    <string name="easy">easy</string>
    <string name="color_picker_default_title">Velg Farge</string>
    <string name="color_swatch_description">Color<xliff:g example="14" id="color_index">%1$d</xliff:g></string>
    <string name="color_swatch_description_selected">Color <xliff:g example="14" id="color_index">%1$d</xliff:g> selected</string>
    <string name="status_exception_error">%1$s (status %2$d). %3$s.</string>
    <string name="signin_other_error">There was an issue with sign in.  Please try again later.</string>
    <string name="players_exception">There was an issue communicating with players.</string>
    <string name="achievements_exception">There was an issue communicating with achievements.</string>
    <string name="signin">Sign in</string>
    <string name="signout">Sign Out</string>
    <string name="passed_out">Passed out</string>
    <string name="settings" >Settings</string>
    <string name="achievments">Achievments</string>
    <string name="normal">normal</string>
    <string name="readText">Sound</string>
    <string name="discarded">Discarded</string>

    <string name="tutorial">Tutorial</string>
    <string name="pickingInformation">
        The goal is to collect 13 cards to your hand
        , where ace is the highest and 2 is the lowest.
        If you choose the faced-up card, the card beside it will be discarded.
        If you choose the second card, the first card will be discarded.
        When the opponent has a green card it means that he has choosen the first card,
        and if its red he has choosen the second card
        Press on the card you want.\n\nTips: It’s wise to choose high cards, and collect cards in the same suit
</string>

    <string name="biddingInformation">
The rows on the top shows the bidding, where you are south and the opponent are north.
        The bidding describes how many tricks you think you could take.
        You can choose between ♣ ♦ ♥ and ♠
contract or no trump contract (NT).\n\nFor example, if you bid 1 ♥ level it means that you have to take at least  7 ♥ tricks.
        How many tricks is always the level that are shown + 6.
        You can never bid lower than the opponent, and if you think the opponent can’t take the tricks that are bidden then you can press X.

    </string>

    <string name="playingInformation">
        Press on the card you want to play. You must play the same suit as the opponent, if you have it on your hand.\n\nTips: It’s smart to play from the longest suit, and take out the opponent’s trump (if the contract have trump).

    </string>
    <string name="medium">medium</string>



</resources>
