<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="Settings"
        android:key="settingpref">
    <ListPreference
        android:entries="@array/listOptions"
        android:entryValues="@array/listValues"
        android:key="difficulty_pref"
        android:summary="@string/easy"
        android:title="@string/difficulty" />

    <ListPreference
        android:entries="@array/nets_list"
        android:entryValues="@array/nets_listValues"
        android:key="net_pref"
        android:summary="@string/easy"
        android:title="@string/AI" />

    <CheckBoxPreference
        android:key="sound"
        android:summary="@string/onOff"
        android:title="@string/sound"/>

    <CheckBoxPreference
        android:key="animation"
        android:summary="@string/onOff"
        android:title="@string/animation"/>

        <ListPreference
            android:entries="@array/backgroundcolor_list"
            android:key="backgroundcolor"
            android:entryValues="@array/backgroundcolor_listValues"
            android:summary="green"
            android:title="@string/backgroundcolor"
            />

        <com.wordpress.honeymoonbridge.bridgeapp.ColorPicker.ColorPreference
            android:key="background_color"
            android:title="Color"
            android:summary="color"
            tools:dialogTitle="@string/color_picker_default_title"
            tools:colors="@array/rainbow"
            tools:columns="5"
            tools:material="true"
            tools:backwardsOrder="true"
            tools:strokeWidth="0"
            tools:strokeColor="@android:color/black"
            android:defaultValue="@color/green"/>


        <ListPreference
            android:entries="@array/gameMode_list"
            android:key="gameMode"
            android:entryValues="@array/gameMode_listValues"
            android:summary="@string/standarGameMode"
            android:title="@string/gameMode" />

    </PreferenceCategory>
</PreferenceScreen>