<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wordpress.honeymoonbridge.bridgeapp.Fragments.BiddingFragment">

    <!--board-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--OpponentBiddingHistory-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/N"
                android:textColor="#000000"
                android:textSize="30dp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/NorthHistory"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal" />


        </LinearLayout>
        <!--Your bidding history-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/S"
                android:textColor="#000000"
                android:textSize="30dp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/SouthHistory"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal" />

        </LinearLayout>


        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.2" />

        <!--Bidding wheel-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:orientation="horizontal">


            <NumberPicker
                android:id="@+id/np1"

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/lightGrey"
                android:dividerPadding="100dp"
                android:theme="@style/LevelPickerText" />

            <NumberPicker
                android:id="@+id/np2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/lightGrey"
                android:theme="@style/SuitPickerText" />


        </LinearLayout>
        <!--BiddingButtons-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.4"
            android:orientation="horizontal">


            <Button
                android:id="@+id/bid_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/orange_button"
                android:text="@string/Bid"
                android:textSize="30dp" />

            <Button
                android:id="@+id/double_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/red_button"
                android:text="@string/Double"

                android:textSize="30dp" />

            <Button
                android:id="@+id/pass_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/green_button"
                android:text="@string/Pass"

                android:textSize="30dp" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>
