<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wordpress.honeymoonbridge.bridgeapp.PlayActivity">
    <!--OuterLayout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#038103"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0"/>


        <!--board-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:orientation="vertical">

            <!--OpponentBiddingHistory-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/N"
                    android:textSize="30dp"
                    android:textColor="#000000"
                    />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/SouthHistory"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"/>


            </LinearLayout>
            <!--Your bidding history-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="#000000"
                    android:text="@string/S"
                    android:textSize="30dp"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/NorthHistory"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"/>

            </LinearLayout>


            <Space
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <!--Bidding wheel-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="8"
                android:orientation="horizontal">



                <NumberPicker
                android:id="@+id/np1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:theme="@style/LevelPickerText"
                android:layout_weight="1"
                android:background="@color/lightGrey"/>

                <NumberPicker
                    android:id="@+id/np2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:theme="@style/SuitPickerText"
                    android:layout_weight="1"
                    android:background="@color/lightGrey"/>


            </LinearLayout>
            <!--BiddingButtons-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:orientation="horizontal">


                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/orange_button"
                    android:text="@string/Bid"
                    android:layout_weight="1"
                    android:onClick="onClickBid"/>
                <Button
                    android:background="@drawable/red_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/Double"
                    android:layout_weight="1"/>
                <Button
                    android:background="@drawable/green_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/Pass"
                    android:layout_weight="1"/>

            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <!--Your Hand-->
            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/yourHand"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                >

                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:src="@drawable/clubs_2"
                    android:layout_marginRight="-50dp"/>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:src="@drawable/clubs_4"
                    android:layout_marginRight="-50dp"/>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:src="@drawable/clubs_9"
                    android:layout_marginRight="-50dp"/>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ace_of_clubs"
                    android:layout_marginRight="-50dp"/>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:src="@drawable/diamonds_2"
                    android:layout_marginRight="-50dp"/>

                <ImageView
                    android:layout_width="0dp"
                    android:onClick="onClick"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:src="@drawable/king_of_diamonds"
                    android:layout_marginRight="-50dp"/>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:src="@drawable/jack_of_spades2"
                    android:layout_marginRight="-50dp"/>

                <ImageView
                    android:layout_width="0dp"
                    android:onClick="onClick"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:src="@drawable/queen_of_spades2"
                    android:layout_marginRight="-50dp"/>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ace_of_spades2"
                    android:layout_marginRight="-50dp"/>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:src="@drawable/hearts_5"
                    android:layout_marginRight="-50dp"/>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:src="@drawable/hearts_9"
                    android:layout_marginRight="-50dp"/>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:src="@drawable/queen_of_hearts2"
                    android:layout_marginRight="-50dp"/>




                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:src="@drawable/king_of_hearts2"
                    android:layout_marginRight="0dp"/>








            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0"/>




    </LinearLayout>

</android.support.constraint.ConstraintLayout>
